--- a/wally.toml
+++ b/wally.toml
@@ -1,12 +1,26 @@
 [package]
 name = "notkaif/igneous"
 description = "Lightweight, modular FPS framework for Roblox providing core weapon mechanics with a hook-based modpack system"
-version = "2.0.0"
+version = "2.1.0"
 license = "MIT"
 authors = ["Kaif"]
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
-exclude = ["sourcemap.json", "rokit.toml", "default.project.json", ".gitignore", "Assets", ".vscode", "README.md", "selene.toml", "Packages", "docs", "moonwave.toml", "Modpacks"]
+exclude = [
+    "sourcemap.json",
+    "rokit.toml",
+    "default.project.json",
+    ".gitignore",
+    "Assets",
+    ".vscode",
+    "README.md",
+    "selene.toml",
+    "Packages",
+    "docs",
+    "moonwave.toml",
+    "Modpacks",
+    "build",
+]
 
 [dependencies]
 Spring = "sleitnick/spring@1.0.0"
